--- a/CPlusPlusStandardLibrary/CPlusPlusStandardLibrary.vcxproj
+++ b/CPlusPlusStandardLibrary/CPlusPlusStandardLibrary.vcxproj
@@ -101,6 +101,8 @@
     <ClCompile Include="Chapter02\malloc_alloc_template.cpp" />
     <ClCompile Include="Chapter02\sub_allocation.cpp" />
     <ClCompile Include="Chapter02\uninitialized.cpp" />
+    <ClCompile Include="Chapter03\3find.cpp" />
+    <ClCompile Include="Chapter03\3findAlgo.cpp" />
     <ClCompile Include="CPlusPlusStandardLibrary.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
