--- a/CPlusPlusStandardLibrary/CPlusPlusStandardLibrary.vcxproj
+++ b/CPlusPlusStandardLibrary/CPlusPlusStandardLibrary.vcxproj
@@ -103,11 +103,15 @@
     <ClCompile Include="Chapter02\malloc_alloc_template.cpp" />
     <ClCompile Include="Chapter02\sub_allocation.cpp" />
     <ClCompile Include="Chapter02\uninitialized.cpp" />
+    <ClCompile Include="Chapter03\34iteratorTraits.cpp" />
+    <ClCompile Include="Chapter03\3advance.cpp" />
+    <ClCompile Include="Chapter03\3associatedtypes.cpp" />
     <ClCompile Include="Chapter03\3autoptr.cpp" />
     <ClCompile Include="Chapter03\3find.cpp" />
     <ClCompile Include="Chapter03\3findAlgo.cpp" />
     <ClCompile Include="Chapter03\3mylist-iterator-test.cpp" />
     <ClCompile Include="Chapter03\3mylist.cpp" />
+    <ClCompile Include="Chapter03\3tag-test.cpp" />
     <ClCompile Include="CPlusPlusStandardLibrary.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
