--- a/CPlusPlusStandardLibrary/CPlusPlusStandardLibrary.vcxproj
+++ b/CPlusPlusStandardLibrary/CPlusPlusStandardLibrary.vcxproj
@@ -147,6 +147,10 @@
     <ClInclude Include="Chapter03\3mylist.h" />
     <ClInclude Include="Chapter03\3MyListIterator.h" />
     <ClInclude Include="Chapter03\3typetraits.h" />
+    <ClInclude Include="Chapter04\4list-iterator.h" />
+    <ClInclude Include="Chapter04\4list-node.h" />
+    <ClInclude Include="Chapter04\4list-iterator.h" />
+    <ClInclude Include="Chapter04\4list-node.h" />
     <ClInclude Include="Chapter04\4vector.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -178,6 +182,7 @@
     <ClCompile Include="Chapter03\3mylist-iterator-test.cpp" />
     <ClCompile Include="Chapter03\3mylist.cpp" />
     <ClCompile Include="Chapter03\3tag-test.cpp" />
+    <ClCompile Include="Chapter04\4list-test.cpp" />
     <ClCompile Include="Chapter04\4vector-test.cpp" />
     <ClCompile Include="CPlusPlusStandardLibrary.cpp" />
     <ClCompile Include="stdafx.cpp">
