update the source code of deque's methods:push_back,push_front,pop_back,pop_front

--- a/CPlusPlusStandardLibrary/CPlusPlusStandardLibrary.vcxproj
+++ b/CPlusPlusStandardLibrary/CPlusPlusStandardLibrary.vcxproj
@@ -143,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Chapter02\2jjalloc.h" />
+    <ClInclude Include="Chapter02\2simple_alloc.h" />
     <ClInclude Include="Chapter03\3iterator.h" />
     <ClInclude Include="Chapter03\3mylist.h" />
     <ClInclude Include="Chapter03\3MyListIterator.h" />
