--- a/CPlusPlusStandardLibrary/CPlusPlusStandardLibrary.vcxproj
+++ b/CPlusPlusStandardLibrary/CPlusPlusStandardLibrary.vcxproj
@@ -152,6 +152,8 @@
     <ClInclude Include="Chapter04\4deque.h" />
     <ClInclude Include="Chapter04\4list-iterator.h" />
     <ClInclude Include="Chapter04\4list-node.h" />
+    <ClInclude Include="Chapter04\4queue.h" />
+    <ClInclude Include="Chapter04\4stack.h" />
     <ClInclude Include="Chapter04\4vector.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -185,6 +187,8 @@
     <ClCompile Include="Chapter03\3tag-test.cpp" />
     <ClCompile Include="Chapter04\4deque-test.cpp" />
     <ClCompile Include="Chapter04\4list-test.cpp" />
+    <ClCompile Include="Chapter04\4queue-test.cpp" />
+    <ClCompile Include="Chapter04\4stack-test.cpp" />
     <ClCompile Include="Chapter04\4vector-test.cpp" />
     <ClCompile Include="CPlusPlusStandardLibrary.cpp" />
     <ClCompile Include="stdafx.cpp">
